# kosnas

./: .gitmodules  CMakeLists.txt
assets/: NAS Arch.drawio
auth_service/: CMakeLists.txt
auth_service/cred_storage_reader/: CMakeLists.txt
auth_service/cred_storage_reader/entity/: CMakeLists.txt
auth_service/cred_storage_reader/entity/include/: entity.hpp
auth_service/cred_storage_reader/entity/source/: entity.cpp  main.cpp
auth_service/cred_storage_reader/lib/: CMakeLists.txt
auth_service/cred_storage_reader/lib/include/: cred_storage_reader.hpp
auth_service/cred_storage_reader/lib/source/: cred_storage_reader.cpp
auth_service/cred_storage_writer/: CMakeLists.txt
auth_service/cred_storage_writer/entity/: CMakeLists.txt
auth_service/cred_storage_writer/entity/include/: entity.hpp
auth_service/cred_storage_writer/entity/source/: entity.cpp  main.cpp
auth_service/cred_storage_writer/lib/: CMakeLists.txt
auth_service/cred_storage_writer/lib/include/: cred_storage_writer.hpp
auth_service/cred_storage_writer/lib/source/: cred_storage_writer.cpp
auth_service/crypto_module/: CMakeLists.txt
auth_service/crypto_module/entity/: CMakeLists.txt
auth_service/crypto_module/entity/include/: entity.hpp
auth_service/crypto_module/entity/source/: entity.cpp  main.cpp
common/: CMakeLists.txt
common/include/: utils.hpp
common/source/: utils.cpp
common/vfs_server/: custom_vfs_server.cmake
common/vfs_server/source/: main.cpp
einit/: CMakeLists.txt
einit/src/: init.yaml.in  security.psl.in  test_init.yaml.in  test_security.psl.in
einit/src/klog/: klog_entity.cpp  klog_storage_entity.cpp
fs/: CMakeLists.txt
fs/entity/: CMakeLists.txt
fs/entity/source/: entity.cpp
fs/lib/: CMakeLists.txt
fs/lib/include/: fs_manager.hpp
fs/lib/source/: fs_manager.cpp
fs_service/: CMakeLists.txt
fs_service/common/: CMakeLists.txt
fs_service/common/include/: fs_base.hpp
fs_service/common/source/: fs_base.cpp
fs_service/fs_reader/: CMakeLists.txt
fs_service/fs_reader/entity/: CMakeLists.txt
fs_service/fs_reader/entity/include/: entity.hpp
fs_service/fs_reader/entity/source/: entity.cpp  main.cpp
fs_service/fs_reader/lib/: CMakeLists.txt
fs_service/fs_reader/lib/include/: fs_reader.hpp
fs_service/fs_reader/lib/source/: fs_reader.cpp
fs_service/fs_writer/: CMakeLists.txt
fs_service/fs_writer/entity/: CMakeLists.txt
fs_service/fs_writer/entity/include/: entity.hpp
fs_service/fs_writer/entity/source/: entity.cpp  main.cpp
fs_service/fs_writer/lib/: CMakeLists.txt
fs_service/fs_writer/lib/include/: fs_writer.hpp
fs_service/fs_writer/lib/source/: fs_writer.cpp
fs_service/proxy_entity/: CMakeLists.txt
fs_service/proxy_entity/source/: proxy_entity.cpp
gateway/: CMakeLists.txt
gateway/include/: auth_service_proxy.hpp  fs_service_proxy.hpp  proxy_base.hpp
gateway/source/: auth_service_proxy.cpp  fs_service_proxy.cpp  main.cpp  proxy_base.cpp
res/: CommonTypes.idl  CredStorageReader.cdl  CredStorageReader.idl  CredStorageReaderEntity.edl  CredStorageReaderVfs.edl  CredStorageVfs.edl  CredStorageWriter.cdl  CredStorageWriter.idl  CredStorageWriterEntity.edl  CredStorageWriterVfs.edl  CryptoModule.cdl  CryptoModule.idl  CryptoModuleEntity.edl  FsManager.edl  FsProxy.edl  FsProxyEntity.edl  FsReader.cdl  FsReader.edl  FsReader.idl  FsReaderEntity.edl  FsReaderVfs.edl  FsVfs.edl  FsWriter.cdl  FsWriter.edl  FsWriter.idl  FsWriterEntity.edl  FsWriterVfs.edl  GatewayEntity.edl  KlogEntity.edl  KlogStorageEntity.edl  TestEntity.edl  TestVfsEntity.edl
res/hdd/test/creds/: SomeUser
test/: CMakeLists.txt  cred_storage_reader_test.cpp  cred_storage_writer_test.cpp  fs_manager_test.cpp  fs_reader_test.cpp  fs_test_common.cpp  fs_test_common.hpp  fs_writer_test.cpp  main.cpp
